front-prod/deploy.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: front-deploy-prod
  labels:
    app: front-deploy-prod
spec:
  replicas: 1
  selector:
    matchLabels:
      app: front-deploy-prod
  template:
    metadata:
      labels:
        app: front-deploy-prod
    spec:
      containers:
      - name: front-deploy-prod
        image: artearenahub/space-frontend:latest
        ports:
        - containerPort: 3000
