front-prod/svc.yml
apiVersion: v1
kind: Service
metadata:
  name: front-svc-prod
spec:
  selector:
    app: front-deploy-prod
  ports:
    - protocol: TCP
      port: 80
      targetPort: 3000
  type: LoadBalancer
