front-prod/ing.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: front-ing-prod
  annotations:
    cert-manager.io/cluster-issuer: "front-clusterissuer-prod"
    spec.ingressClassName: "public"
spec:
  ingressClassName: "public"
  tls:
  - hosts:
    - www.spacearena.net
    secretName: front-prod-tls-secret
  rules:
  - host: www.spacearena.net
    http:
      paths:
      - pathType: Prefix
        path: "/"
        backend:
          service:
            name: front-svc-prod
            port:
              number: 80
